# Tensorflow-form-recognition

tensorflow-form-recognitionn/: README.md  app.py  mnist_keras.py  mnist_utils.py  pyproject.toml
tensorflow-form-recognitionn/model_keras/variables/: variables.index
tensorflow-form-recognitionn/tests/: test_mnist_keras.py
