[project]
name = "tensor-form-recognition"
version = "0.1.0"
description = "Mnist recognition with Tensorflow"
authors = [
    {name = "Ayoub Bougharraf"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tensorflow (>=2.20.0,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-cov = "^7.0.0"
ruff = "^0.14.6"
mypy = "^1.18.2"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "tensorflow.*",
    "keras.*"
]
ignore_missing_imports = true
